// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create User Controller Snapshot Test for database error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test for delete expired unverified user and create new. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "UserTest",
      "userId": "mocked-user-id",
    },
    "message": "Verification link sent to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for missing fields. 1`] = `
{
  "body": {
    "message": "Please provide email, username, fullname, password, and confirm password.",
    "success": false,
  },
  "status": 422,
}
`;

exports[`Create User Controller Snapshot Test for password mismatch. 1`] = `
{
  "body": {
    "message": "Password and confirm password must match.",
    "success": false,
  },
  "status": 422,
}
`;

exports[`Create User Controller Snapshot Test for successful user creation. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "UserTest",
      "userId": "mocked-user-id",
    },
    "message": "Verification link sent to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for user already exists. 1`] = `
{
  "body": {
    "message": "This email or username is already taken. Please try another one.",
    "success": false,
  },
  "status": 409,
}
`;
